--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,30 @@
-gradio==4.44.0
-huggingface_hub==0.19.4
-numpy
-requests
+# NullAI Production Requirements (Demo Mode - No ML Dependencies)
+
+# Web Framework
+fastapi==0.109.0
+uvicorn[standard]==0.27.0
+python-multipart==0.0.6
+
+# Database
+sqlalchemy==2.0.25
+alembic==1.13.1
+
+# Data Validation
+pydantic==2.5.3
+pydantic-settings==2.1.0
+
+# HTTP Client
+httpx==0.26.0
+aiohttp==3.9.1
+
+# Utilities
+python-dotenv==1.0.0
+python-jose[cryptography]==3.3.0
+passlib[bcrypt]==1.7.4
+python-dateutil==2.8.2
+
+# Logging & Monitoring
+structlog==24.1.0
+
+# CORS
+python-multipart==0.0.6
