--- a/models_config.json
+++ b/models_config.json
@@ -9,7 +9,7 @@
       "max_tokens": 4096,
       "temperature": 0.7,
       "timeout": 120,
-      "is_default": true,
+      "is_default": false,
       "supported_domains": [
         "medical",
         "legal",
@@ -18,6 +18,25 @@
         "programming"
       ],
       "description": "NullAI専用にファインチューニングされたDeepSeek R1 32B。Apple Silicon MLX最適化版。"
+    },
+    {
+      "model_id": "phi4-finetuned-f16-gguf",
+      "display_name": "Phi-4 Finetuned F16 GGUF (Ollama)",
+      "provider": "ollama",
+      "api_url": "http://localhost:11434",
+      "model_name": "phi4-finetuned:f16",
+      "max_tokens": 4096,
+      "temperature": 0.7,
+      "timeout": 120,
+      "is_default": true,
+      "supported_domains": [
+        "medical",
+        "legal",
+        "economics",
+        "general",
+        "programming"
+      ],
+      "description": "MLXでファインチューニングされたPhi-4 (F16 GGUF) モデルをOllamaで提供。"
     },
     {
       "model_id": "deepseek-r1-32b",
